Prevent overflow of tags in TagHolder.
Computes the maximum tags the container can accomodate by adding up the maximum width of each tag.

--- a/src/sidebar-overlay/components/Annotation.css
+++ b/src/sidebar-overlay/components/Annotation.css
@@ -144,13 +144,13 @@
 }
 
 .tagPill {
-    font-size: 11px;
+    font-size: 12px;
     font-weight: 800;
     background-color: #c6f3e5;
     color: #000;
     margin-right: 8px;
     margin-top: 5px;
-    padding: 5px;
+    padding: 3px 5px;
     cursor: pointer;
 }
 
